--- a/EggTimer-Swift/Base.lproj/Main.storyboard
+++ b/EggTimer-Swift/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,134 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="EggTimer_Swift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC" userLabel="Background View">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="39" translatesAutoresizingMaskIntoConstraints="NO" id="GUF-tS-25M" userLabel="Vertical Stack View">
+                                <rect key="frame" x="16" y="59" width="361" height="759"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KfQ-eA-bke" userLabel="Title View">
+                                        <rect key="frame" x="0.0" y="0.0" width="361" height="227"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How Do You Like Your Eggs?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="u5A-Lp-b6o" userLabel="Title.Label">
+                                                <rect key="frame" x="0.0" y="0.0" width="361" height="227"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.82745099070000006" green="0.94509804249999996" blue="0.98431372640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <constraints>
+                                            <constraint firstItem="u5A-Lp-b6o" firstAttribute="leading" secondItem="KfQ-eA-bke" secondAttribute="leading" id="8yg-Rk-qSY"/>
+                                            <constraint firstAttribute="bottom" secondItem="u5A-Lp-b6o" secondAttribute="bottom" id="YYg-nw-WEl"/>
+                                            <constraint firstAttribute="trailing" secondItem="u5A-Lp-b6o" secondAttribute="trailing" id="a5k-E2-s73"/>
+                                            <constraint firstItem="u5A-Lp-b6o" firstAttribute="top" secondItem="KfQ-eA-bke" secondAttribute="top" id="iww-p5-WkL"/>
+                                        </constraints>
+                                    </view>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="I0D-Xq-mD2" userLabel="Egg Stack View">
+                                        <rect key="frame" x="0.0" y="266" width="361" height="227"/>
+                                        <subviews>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xwb-tr-6Pw" userLabel="Soft Egg View">
+                                                <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="riy-aT-0ja" userLabel="Soft Egg Button">
+                                                        <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    </button>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="soft_egg" translatesAutoresizingMaskIntoConstraints="NO" id="Ti1-FW-aZk" userLabel="soft egg ImageView">
+                                                        <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.82745099070000006" green="0.94509804249999996" blue="0.98431372640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstItem="riy-aT-0ja" firstAttribute="leading" secondItem="Xwb-tr-6Pw" secondAttribute="leading" id="3pC-rz-ryw"/>
+                                                    <constraint firstItem="Ti1-FW-aZk" firstAttribute="leading" secondItem="Xwb-tr-6Pw" secondAttribute="leading" id="6Hp-FL-pTI"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Ti1-FW-aZk" secondAttribute="trailing" id="OIi-i0-lYT"/>
+                                                    <constraint firstAttribute="bottom" secondItem="riy-aT-0ja" secondAttribute="bottom" id="S87-tQ-ta9"/>
+                                                    <constraint firstAttribute="trailing" secondItem="riy-aT-0ja" secondAttribute="trailing" id="gaj-lr-OLD"/>
+                                                    <constraint firstItem="riy-aT-0ja" firstAttribute="top" secondItem="Xwb-tr-6Pw" secondAttribute="top" id="irr-un-ZbH"/>
+                                                    <constraint firstItem="Ti1-FW-aZk" firstAttribute="top" secondItem="Xwb-tr-6Pw" secondAttribute="top" id="lPb-zK-LQg"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Ti1-FW-aZk" secondAttribute="bottom" id="liz-Lk-sOM"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0St-lb-Xyp" userLabel="Medium Egg View">
+                                                <rect key="frame" x="127" y="0.0" width="107" height="227"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Vm-IW-FrE" userLabel="Medium Button">
+                                                        <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    </button>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="medium_egg" translatesAutoresizingMaskIntoConstraints="NO" id="pEP-ry-tss" userLabel="medium egg ImageView">
+                                                        <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.82745099070000006" green="0.94509804249999996" blue="0.98431372640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="5Vm-IW-FrE" secondAttribute="bottom" id="28f-Sl-BXW"/>
+                                                    <constraint firstItem="5Vm-IW-FrE" firstAttribute="top" secondItem="0St-lb-Xyp" secondAttribute="top" id="2VR-bp-7T8"/>
+                                                    <constraint firstItem="pEP-ry-tss" firstAttribute="leading" secondItem="0St-lb-Xyp" secondAttribute="leading" id="QeQ-Ud-Cho"/>
+                                                    <constraint firstAttribute="bottom" secondItem="pEP-ry-tss" secondAttribute="bottom" id="RnA-Go-DVe"/>
+                                                    <constraint firstAttribute="trailing" secondItem="pEP-ry-tss" secondAttribute="trailing" id="VxW-k8-0Ms"/>
+                                                    <constraint firstItem="5Vm-IW-FrE" firstAttribute="leading" secondItem="0St-lb-Xyp" secondAttribute="leading" id="vP8-FE-Oe5"/>
+                                                    <constraint firstItem="pEP-ry-tss" firstAttribute="top" secondItem="0St-lb-Xyp" secondAttribute="top" id="vbk-8m-XUy"/>
+                                                    <constraint firstAttribute="trailing" secondItem="5Vm-IW-FrE" secondAttribute="trailing" id="w3z-hJ-ks0"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6yO-6Q-i7j" userLabel="Hard Egg View">
+                                                <rect key="frame" x="254" y="0.0" width="107" height="227"/>
+                                                <subviews>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I9I-Lp-MqW" userLabel="Hard Egg Button">
+                                                        <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                        <state key="normal" title="Button"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                    </button>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hard_egg" translatesAutoresizingMaskIntoConstraints="NO" id="y83-Ta-sWq" userLabel="hard egg ImageView">
+                                                        <rect key="frame" x="0.0" y="0.0" width="107" height="227"/>
+                                                    </imageView>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.82745099070000006" green="0.94509804249999996" blue="0.98431372640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="y83-Ta-sWq" secondAttribute="trailing" id="45L-xX-zHa"/>
+                                                    <constraint firstItem="y83-Ta-sWq" firstAttribute="top" secondItem="6yO-6Q-i7j" secondAttribute="top" id="5kU-Pk-rcA"/>
+                                                    <constraint firstAttribute="trailing" secondItem="I9I-Lp-MqW" secondAttribute="trailing" id="8Ia-Ib-T0Q"/>
+                                                    <constraint firstItem="I9I-Lp-MqW" firstAttribute="top" secondItem="6yO-6Q-i7j" secondAttribute="top" id="ISI-mu-QZL"/>
+                                                    <constraint firstItem="y83-Ta-sWq" firstAttribute="leading" secondItem="6yO-6Q-i7j" secondAttribute="leading" id="RL8-cA-yYj"/>
+                                                    <constraint firstItem="I9I-Lp-MqW" firstAttribute="leading" secondItem="6yO-6Q-i7j" secondAttribute="leading" id="g92-lA-VOh"/>
+                                                    <constraint firstAttribute="bottom" secondItem="y83-Ta-sWq" secondAttribute="bottom" id="oGa-Ep-dA6"/>
+                                                    <constraint firstAttribute="bottom" secondItem="I9I-Lp-MqW" secondAttribute="bottom" id="oa3-ZO-5CG"/>
+                                                </constraints>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i41-36-4Eq" userLabel="Timer View">
+                                        <rect key="frame" x="0.0" y="532" width="361" height="227"/>
+                                        <color key="backgroundColor" red="0.82745099070000006" green="0.94509804249999996" blue="0.98431372640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.82745099070000006" green="0.94509804249999996" blue="0.98431372640000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="GUF-tS-25M" secondAttribute="trailing" id="NYq-Pw-jF4"/>
+                            <constraint firstItem="GUF-tS-25M" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="QQv-C6-ZHi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="GUF-tS-25M" secondAttribute="bottom" id="QVe-th-MzS"/>
+                            <constraint firstItem="GUF-tS-25M" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="Sgl-8k-QeY"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="29.770992366412212" y="3.5211267605633805"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hard_egg" width="287.66665649414062" height="366.33334350585938"/>
+        <image name="medium_egg" width="288" height="363.33334350585938"/>
+        <image name="soft_egg" width="287" height="365.33334350585938"/>
+    </resources>
 </document>
